--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ undisturbed volcanic ash soils (Andisols) </li>
 Assessment for Community-based Intervention, Water (IF: 2.544; CiteScore: 3.0) doi: 10.3390/w12092366
                 <a href = "https://www.mdpi.com/2073-4441/12/9/2366" target ="_blank"> <strong>link here </strong> </a></li>
                 <li> Balares, K.L., Nuevo, J., Chiong III, M., Macasieb, R., Resurreccion, A. C., Orozco, C., 2020. Estimating Energy Consumption and Cost for the Electrocoagulation of Arsenic-laden Water (ECAR) Using Iron Electrodes. E3S Web of Conferences (Scopus-indexed; CiteScore 2019: 0.4), 148. doi: 10.1051/e3sconf/202014801004
-Invited publication from the Proceedings of the 12th Regional Conference on Environmental Engineering </li>
+Invited publication from the Proceedings of the 12th Regional Conference on Environmental Engineering 
+                <a href = "https://www.e3s-conferences.org/articles/e3sconf/abs/2020/08/e3sconf_etmc2020_01004/e3sconf_etmc2020_01004.html" target ="_blank"> <strong>link here </strong> </a></li></li>
                 <li> Micah Flor V. Montefalcon, Meliton R. Chiong III, Augustus C. Resurreccion,Sergi Garcia-Segura and Joey D. Ocon, Arsenic Removal by Advanced Electrocoagulation Processes: The Role of Oxidants Generated and Kinetic Modeling, Catalysts 2020, 10(8), 928; https://doi.org/10.3390/catal10080928 IF 3.520 </li>
                 <li> S.P.V. Tan, A.T. Bautista, N.D.S. Mendoza, C.D.T. Racadio, M. Puthenpurekal, A.C. Resurreccion, H. Matsuzaki, Iodine-129 for determining the origin of salinity in groundwater in Pampanga, Philippines, Journal of Environmental Radioactivity, Volume 218, 2020, https://doi.org/10.1016/j.jenvrad.2020.106239. (https://www.sciencedirect.com/science/article/pii/S0265931X19307325) IF 2.161</li>
             </ul>
