--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Invited publication from the Proceedings of the 12th Regional Conference on Envi
             <ul>
                 <li> Associate Dean for Instructions and Research (2012-2016)</li>
                 <li> Project Leader of Engineering Research and Development for Technology (2012-2016)</li>
-                <li> Program Coordinator, Environmental Engineering Program (2016-present)</li>
+                <li> Program Coordinator, Environmental Engineering Program (2016-2018)</li>
                 <li> Program Coordinator, AUN/SEED-Net Program in Environmental Engineering (2016-2018)</li>
                 <li> Deputy Director, Human Resource Development Office (2018-2020)</li>
                 <li>Director, Human Resource Development Office (2020-Present)</li>
