--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8">
     <title>Augie's Personal Site</title>
 </head>
+<style>
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: #008B8B;
+  text-align: center;
+}
+
+h2 {
+  color: #008B8B;
+  text-align: center;
+}
+p {
+  font-family: verdana;
+  font-size: 15px;
+  }
+li {
+  font-family: verdana;
+  font-size: 15px;
+  }
+  td {
+  font-family: verdana;
+  font-size: 15px;
+  }
+hr {
+    border: none;
+    border-top: 3px double #333;
+    color: #333;
+    overflow: visible;
+    text-align: center;
+    height: 5px;
+}
+
+</style>
 <body>
 <table cellspacing = "20">
     <td>
@@ -17,7 +53,7 @@
     </p>
 
     <p>  <em>Director</em>, <a href = "https://hrdo.upd.edu.ph/" target = "_blank">Human Resource Development Office </a> <br> University of the Philippines Diliman </p>
-    <hr size = 10 color = "green">
+    <hr>
 
     </td>
 </table>
@@ -27,7 +63,7 @@
         I am also working on research in water quality modeling and solid waste management. <br>
         Currently, I am also the director of the human resource department of the University.
     </p>
-     <hr size = 10 color = "green">
+     <hr>
     <h2> Education </h2>
         <ul>
             <li> BS Geodetic Engineering (cum laude), University of the Philippines Diliman, 1997 </li>
@@ -42,7 +78,7 @@ undisturbed volcanic ash soils (Andisols) </li>
             <li> ERDT Postdoctoral Fellow, Aalborg University, Denmark 2010 </li>
 
         </ul>
-    <hr size = 10 color = "green">
+    <hr>
 
     <h2> Work Experience </h2>
     <table cellspacing="20">
@@ -67,14 +103,14 @@ undisturbed volcanic ash soils (Andisols) </li>
             <td> Instructor of Engineering Science, University of the Philippines</td>
           </tr>
     </table>
-    <hr size = 10 color = "green">
+    <hr>
     <h2> Courses Taught: </h2>
         <ul>
            <li>CE 21: Probability and Statistics for Civil Engineers</li>
            <li>ES 101: Mechanics of Particles and Rigid Bodies </li>
            <li>ES 201: Advanced Mathematical Methods in Engineering I</li>
         </ul>
-     <hr size = 10 color = "green">
+     <hr>
 <h2> Research Publications: </h2>
     <ul>
         <li> 2020: </li>
@@ -85,7 +121,7 @@ undisturbed volcanic ash soils (Andisols) </li>
 Assessment for Community-based Intervention, Water (IF: 2.544; CiteScore: 3.0) doi: 10.3390/w12092366
                 <a href = "https://www.mdpi.com/2073-4441/12/9/2366" target ="_blank"> <strong>link here </strong> </a></li>
                 <li> Balares, K.L., Nuevo, J., Chiong III, M., Macasieb, R., Resurreccion, A. C., Orozco, C., 2020. Estimating Energy Consumption and Cost for the Electrocoagulation of Arsenic-laden Water (ECAR) Using Iron Electrodes. E3S Web of Conferences (Scopus-indexed; CiteScore 2019: 0.4), 148. doi: 10.1051/e3sconf/202014801004
-Invited publication from the Proceedings of the 12th Regional Conference on Environmental Engineering 
+Invited publication from the Proceedings of the 12th Regional Conference on Environmental Engineering
                 <a href = "https://www.e3s-conferences.org/articles/e3sconf/abs/2020/08/e3sconf_etmc2020_01004/e3sconf_etmc2020_01004.html" target ="_blank"> <strong>link here </strong> </a></li>
                 <li> Micah Flor V. Montefalcon, Meliton R. Chiong III, Augustus C. Resurreccion,Sergi Garcia-Segura and Joey D. Ocon, Arsenic Removal by Advanced Electrocoagulation Processes: The Role of Oxidants Generated and Kinetic Modeling, Catalysts 2020, 10(8), 928; https://doi.org/10.3390/catal10080928 IF 3.520 </li>
                 <li> S.P.V. Tan, A.T. Bautista, N.D.S. Mendoza, C.D.T. Racadio, M. Puthenpurekal, A.C. Resurreccion, H. Matsuzaki, Iodine-129 for determining the origin of salinity in groundwater in Pampanga, Philippines, Journal of Environmental Radioactivity, Volume 218, 2020, https://doi.org/10.1016/j.jenvrad.2020.106239. (https://www.sciencedirect.com/science/article/pii/S0265931X19307325) IF 2.161</li>
@@ -96,16 +132,16 @@ Invited publication from the Proceedings of the 12th Regional Conference on Envi
             <ul>
                 <li> Associate Dean for Instructions and Research (2012-2016)</li>
                 <li> Project Leader of Engineering Research and Development for Technology (2012-2016)</li>
-                <li> Program Coordinator, Environmental Engineering Program (2016-2018)</li>
+                <li> Program Coordinator, Environmental Engineering Program (2016-present)</li>
                 <li> Program Coordinator, AUN/SEED-Net Program in Environmental Engineering (2016-2018)</li>
                 <li> Deputy Director, Human Resource Development Office (2018-2020)</li>
                 <li>Director, Human Resource Development Office (2020-Present)</li>
             </ul>
-    <hr size = 10 color = "green">
+    <hr>
 <h3> Skills and Competencies </h3>
 
 <table cellspacing="20">
-    <tr> 
+    <tr>
         <td>
 
                 <table>
